Still catching up to 0.96.1.

--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-09-21
+% \update      2018-10-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -272,9 +272,10 @@
 \label{subsubsec:concepts_terms_song}
 
    \index{song}
-   A \textsl{song} is a collection of patterns in a specific layout, as
-   assembled via the Song Editor window.
-   Also see \ref{subsubsec:concepts_terms_performance}
+   A \textsl{song} is a collection of patterns in a specific temporal
+   layout, as assembled via the Song Editor window.
+   See \ref{subsubsec:concepts_terms_performance}.
+   See \ref{subsubsec:concepts_terms_trigger}.
 
 \subsubsection{Concepts / Terms / trigger}
 \label{subsubsec:concepts_terms_trigger}
