--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-09-16
+% \update      2018-10-04
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1547,6 +1547,10 @@
    Generally, it is recommend to stick with the 4x8 (32 patterns/set),
    8x8 (64 patterns/set), and 8x12 (96 patterns/set).  This works best with the
    existing set of 32 hot-keys.
+
+   Also note that the Qt 5 user-interface also supports "variset", whether in
+   the main window or in the external live-frame.  In addition, both windows
+   can be resized and still show good renditions of the pattern-slots.
 
 %-------------------------------------------------------------------------------
 % vim: ts=3 sw=3 et ft=tex
