--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-09-30
+% \update      2018-10-04
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.96.0}
+\title{Sequencer64 User Manual 0.96.1}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -80,7 +80,7 @@
 \label{sec:introduction}
 
    This document describes \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.96.0.
+   \cite{sequencer64}, through version 0.96.1.
    The following projects support \textsl{Sequencer64}:
 
    \begin{itemize}
@@ -192,7 +192,8 @@
       \item Native JACK MIDI support!  At last!
       \item Tempo events are recordable and editable, in the first track.
       \item A "Tap" button sets the BPM by tapping a button or a key.
-      \item Supports more than one visible screen-set (multi-set),
+      \item Supports more than one visible screen-set (multi-set, or, in the Qt
+         version of the user-interface, multiple screen-set/live-frame windows),
          or more patterns in a single set (variset).
       \item The \textsl{event editor}
          provides basic viewing and editing of MIDI events as text.
